# cmake-template

./: CMakeLists.txt  README.md
include/helloworld/: hello.hpp
src/: hello.cpp  main.cpp
tests/: tests.cpp
